--- a/index.html
+++ b/index.html
@@ -7,34 +7,41 @@
     <meta name="description" content="REBUS SAS es una empresa que brinda servicios de consultaría en proyectos de arquitectura e ingeniería, planificación y desarrollo de obras civiles.">
     <meta name="keywords" content="REBUS, ingeniería, servicios, proyectos">
     <title>REBUS</title>
+    <link rel="shortcut icon" href="../assets/img/logo/favicon-rebus.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Iconos -->
+    <script src="https://kit.fontawesome.com/1ba7d96e8f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div class="header-top" >
-            <ul class="header-info">
-                <li>+54 299 4111 111</li>
-                <li><a href="">info@dominio.com</a></li>
-                <li>Irigoyen, Cipolletti, Río Negro</li>
-            </ul>
-            <ul class="header-social">
-                <li><a href=""><img src="./assets/img/iconos/instagram.png" alt=""></a></li>
-                <li><a href=""><img src="./assets/img/iconos/facebook.png" alt=""></a></li>
-                <li><a href=""><img src="./assets/img/iconos/whatsapp.png" alt=""></a></li>
-            </ul>
-        </div>
-        <div class="header-bottom" >
-            <a href=""><img src="./assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
-            <nav class="menu-ppal">
-                <a href="./index.html">Inicio</a>
-                <a href="./pages/proyectos.html">Proyectos</a>
-                <a href="./pages/servicios.html">Servicios</a>
-                <a href="./pages/nosotros.html">Nosotros</a>
-                <a href="./pages/contacto.html">Contacto</a>
-            </nav>
+        <div class="contenedor-header">
+            <div class="contenido-header">
+                <div class="header-gral header-top" >
+                    <ul class="header-gral header-info">
+                        <li><i class="fa-solid fa-phone"></i>+54 299 4111 111</li>
+                        <li><i class="fa-regular fa-envelope-open"></i><a href="">info@dominio.com</a></li>
+                        <li><i class="fa-solid fa-location-dot"></i>Irigoyen, Cipolletti, Río Negro</li>
+                    </ul>
+                    <ul class="header-social">
+                        <li><a href=""><img src="./assets/img/iconos/instagram.png" alt=""></a></li>
+                        <li><a href=""><img src="./assets/img/iconos/facebook.png" alt=""></a></li>
+                        <li><a href=""><img src="./assets/img/iconos/whatsapp.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="header-bottom" >
+                    <a href=""><img src="./assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
+                    <nav class="menu-ppal">
+                        <a href="./index.html">Inicio</a>
+                        <a href="./pages/proyectos.html">Proyectos</a>
+                        <a href="./pages/servicios.html">Servicios</a>
+                        <a href="./pages/nosotros.html">Nosotros</a>
+                        <a href="./pages/contacto.html">Contacto</a>
+                    </nav>
+                </div>
+            </div>  
         </div>
     </header>
     <main>
@@ -49,28 +56,20 @@
             </div>
         </section>
             <section class="contenedor">
-                <div class="contenido"> 
+                <div class="contenido galeria-de-2"> 
                     <div>  
                         <h2>Sobre nuestra empresa</h2>
-                        <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                            turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                            nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                            tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                        feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                        <p>Bienvenidos a Rebus, una empresa dedicada a brindar soluciones integrales en el campo de la ingeniería y construcción. Con una amplia trayectoria y un equipo altamente calificado, nos enorgullece ofrecer servicios de excelencia a nuestros clientes en [ubicación]. Nuestra pasión por la innovación, la calidad y la eficiencia nos impulsa a superar constantemente los estándares de la industria.
                         </p>
-                        <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                            turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                            nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                            tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                        feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                        <p>En Rebus, nos comprometemos a satisfacer las necesidades y expectativas de nuestros clientes en cada proyecto que emprendemos. Valoramos las relaciones a largo plazo y nos esforzamos por establecer asociaciones sólidas y mutuamente beneficiosas. Creemos en la transparencia, la comunicación abierta y la colaboración para lograr resultados exitosos.
                         </p>
                     </div>
-                    <div class="galeria-de-2">
+                    <div class="img2-en-1-col">
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/about-1.jpg" alt="hombre soldando">
                         </div>
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/about-2.jpg" alt="industria">
                         </div>
                     </div>
                 </div>
@@ -78,27 +77,29 @@
             <section class="contenedor fondo-gris"> 
                 <div class="contenido">
                     <h2>¿Qué hacemos?</h2>
-                    <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                        turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                        nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                        tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                    feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                    <p>En Rebus, ofrecemos una amplia gama de servicios en ingeniería y construcción, adaptados a las necesidades específicas de nuestros clientes. Algunas de nuestras áreas de especialización incluyen:
+                        <ol>
+                            <li>Diseño arquitectónico: Nuestro equipo de arquitectos talentosos se encarga de crear diseños innovadores y funcionales que reflejen la visión única de cada cliente.</li>
+                            <li>Ingeniería estructural: Desarrollamos soluciones de ingeniería sólidas y seguras para garantizar la estabilidad y resistencia de las estructuras que construimos.</li>
+                            <li>Construcción: Nos especializamos en la gestión y ejecución de proyectos de construcción, cumpliendo con los más altos estándares de calidad y asegurando plazos eficientes.</li>
+                            <li>Remodelaciones y renovaciones: Brindamos servicios de remodelación y renovación de espacios existentes, transformándolos en áreas funcionales y estéticamente atractivas.</li>
+                            <li>Consultoría técnica: Proporcionamos asesoramiento técnico experto en todas las etapas de un proyecto, desde el diseño inicial hasta la supervisión de la construcción.</li>
+                        </ol>
                     </p>
-                    <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                        turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                        nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                        tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                    feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                    <p>En Rebus, nos apasiona el trabajo bien hecho y nos esforzamos por superar las expectativas de nuestros clientes en cada proyecto. Si buscas una empresa confiable y comprometida con la calidad y la excelencia, estás en el lugar correcto.
                     </p>
                     <div class="galeria-de-3x1">
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/service-1.jpg" alt="hombre soldando">
+                            <h3>Ingeniería Mecánica</h3>
                         </div>
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/service-2.jpg" alt="hombre en un campo">
+                            <h3>Procesamiento de Agricultura</h3>
                         </div>
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/service-3.jpg" alt="industria">
+                            <h3>Gas y Petróleo</h3>
                         </div>
                     </div>
                 </div>
@@ -108,13 +109,13 @@
                     <h2>Nuestros Proyectos</h2>
                     <div class="galeria-de-3x1">
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/project-1.jpg" alt="vías ferroviarias">
                         </div>
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/project-2.jpg" alt="hombre operando máquina">
                         </div>
                         <div>
-                            <img src="./assets/img/hombre-soldando.png" alt="">
+                            <img src="./assets/img/project-3.jpg" alt="hombre en tractor trasladando madera">
                         </div>
                     </div>
                 </div>
@@ -124,63 +125,63 @@
                     <h2>Nuestros Clientes</h2>
                     <div class="galeria-de-clientes">
                         <div>
-                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                            <img src="./assets/img/clientes/cliente-1.jpg" alt="Inventor Forums">
                         </div>
                         <div>
-                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                            <img src="./assets/img/clientes/cliente-2.jpg" alt="Soul Source">
                         </div>
                         <div>
-                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                            <img src="./assets/img/clientes/cliente-3.jpg" alt="40 present">
                         </div>
                         <div>
-                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                            <img src="./assets/img/clientes/cliente-4.jpg" alt="BreadCrumbs">
                         </div>
                         <div>
-                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                            <img src="./assets/img/clientes/cliente-5.jpg" alt="ALiceye">
                         </div>
                         <div>
-                            <img src="./assets/img/clientes/logo-cliente.jpg" alt="">
+                            <img src="./assets/img/clientes/cliente-1.jpg" alt="Inventor Forums">
                         </div>
                     </div>
                 </div>
             </section>
         </main>
         <footer>
-            <div>
-                <img src="./assets/img/logo/Rebus-blanco.png" alt="">
-            </div>
-            <div>
-                <h3>Enlaces Rápidos</h3>
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./pages/proyectos.html">Proyectos</a></li>
-                    <li><a href="./pages/servicios.html">Servicios</a></li>
-                    <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
-                </ul>
-            </div>
-            <div>
-                <h3>Servicios</h3>
-                <ul>
-                    <li><a href="#">Servicios 1</a></li>
-                    <li><a href="#">Servicios 2</a></li>
-                    <li><a href="#">Servicios 3</a></li>
-                    <li><a href="#">Servicios 4</a></li>
-                </ul>
-            </div>
-            <div>
-                <h3>Contacto</h3>
-                <ul>
-                    <li>299 1111 111</li>
-                    <li>Irigoyen, Cipolletti</li>
-                    <li>Río Negro</a></li>
-                </ul>
-                <ul class="header-social">
-                    <li><a href=""><img src="./assets/img/iconos/instagram.png" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/iconos/facebook.png" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/iconos/whatsapp.png" alt=""></a></li>
-                </ul>
-            </div>
+                    <div>
+                        <img src="./assets/img/logo/Rebus-blanco.png" alt="">
+                    </div>
+                    <div>
+                        <h3>Enlaces Rápidos</h3>
+                        <ul>
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li><a href="./pages/proyectos.html">Proyectos</a></li>
+                            <li><a href="./pages/servicios.html">Servicios</a></li>
+                            <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                            <li><a href="./pages/contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Servicios</h3>
+                        <ul>
+                            <li><a href="#">Servicios 1</a></li>
+                            <li><a href="#">Servicios 2</a></li>
+                            <li><a href="#">Servicios 3</a></li>
+                            <li><a href="#">Servicios 4</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Contacto</h3>
+                        <ul>
+                            <li>299 1111 111</li>
+                            <li>Irigoyen, Cipolletti</li>
+                            <li>Río Negro</a></li>
+                        </ul>
+                        <ul class="header-social">
+                            <li><a href=""><img src="./assets/img/iconos/instagram.png" alt=""></a></li>
+                            <li><a href=""><img src="./assets/img/iconos/facebook.png" alt=""></a></li>
+                            <li><a href=""><img src="./assets/img/iconos/whatsapp.png" alt=""></a></li>
+                        </ul>
+                    </div>
         </footer>
 </body>
 </html>
