--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,35 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Somos una empresa de ingeniería con más de 10 años de experiencia.">
     <meta name="keywords" content="REBUS, empresa de ingeniería,empresa de ingenieria civil">
-    <title>Nosotros</title>
+    <title>Nosotros | Rebus</title>
+    <link rel="shortcut icon" href="../assets/img/logo/favicon-rebus.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<!-- Iconos -->
+<script src="https://kit.fontawesome.com/1ba7d96e8f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div class="header-top" >
-            <ul class="header-info">
-                <li>+54 299 4111 111</li>
-                <li><a href="">info@dominio.com</a></li>
-                <li>Irigoyen, Cipolletti, Río Negro</li>
-            </ul>
-            <ul class="header-social">
-                <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
-            </ul>
-        </div>
-        <div class="header-bottom" >
-            <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
-            <nav class="menu-ppal">
-                <a href="../index.html">Inicio</a>
-                <a href="./proyectos.html">Proyectos</a>
-                <a href="./servicios.html">Servicios</a>
-                <a href="./nosotros.html">Nosotros</a>
-                <a href="./contacto.html">Contacto</a>
-            </nav>
+        <div class="contenedor-header">
+            <div class="contenido-header">
+                <div class="header-gral header-top" >
+                    <ul class="header-gral header-info">
+                        <li><i class="fa-solid fa-phone"></i>+54 299 4111 111</li>
+                        <li><i class="fa-regular fa-envelope-open"></i><a href="">info@dominio.com</a></li>
+                        <li><i class="fa-solid fa-location-dot"></i>Irigoyen, Cipolletti, Río Negro</li>
+                    </ul>
+                    <ul class="header-social">
+                        <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="header-bottom" >
+                    <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
+                    <nav class="menu-ppal">
+                        <a href="../index.html">Inicio</a>
+                        <a href="./proyectos.html">Proyectos</a>
+                        <a href="./servicios.html">Servicios</a>
+                        <a href="./nosotros.html">Nosotros</a>
+                        <a href="./contacto.html">Contacto</a>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -52,17 +59,7 @@
         <section class="contenedor">
             <div class="contenido">
                 <h2>Visión de la Compañía</h2>
-                <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                    turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                    nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                    tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
-                </p>
-                <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                    turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                    nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                    tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                <p>En Rebus, nuestra visión es convertirnos en un referente reconocido en la industria de la ingeniería y construcción, destacando por nuestra excelencia en la ejecución de proyectos y nuestra capacidad para superar las expectativas de nuestros clientes. Buscamos ser líderes en innovación, sostenibilidad y eficiencia, contribuyendo así al desarrollo de comunidades y al crecimiento de la industria.
                 </p>
             </div>
         </section>
@@ -70,23 +67,15 @@
             <div class="contenido">
                 <div class="galeria-de-2">
                     <div>
-                        <img src="../assets/img/hombre-trabajando.jpg" alt="" style="max-width: 30rem; min-height: 50rem;">
+                        <img src="../assets/img/constructores-h.jpg" alt="constructores" >
                     </div>
                     <div>
                         <div style="color: white;">
                             <h2>Nuestro Propósito</h2>
-                            <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                                turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                                nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                                tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                            feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                            <p>En Rebus, nuestro propósito es crear un impacto positivo a través de nuestros proyectos y servicios. Nos esforzamos por construir estructuras seguras y funcionales que mejoren la calidad de vida de las personas, así como por contribuir al desarrollo sostenible del entorno en el que operamos. Trabajamos con pasión y dedicación para convertir las ideas en realidad y dejar un legado duradero en cada proyecto en el que participamos.
                             </p>
                             <br>
-                            <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                                turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                                nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                                tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                            feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                            <p>Nuestro propósito nos impulsa a mantener altos estándares éticos y profesionales en todas nuestras acciones, fomentando la colaboración, la transparencia y el respeto en nuestras relaciones con clientes, proveedores y la comunidad en general. En [Nombre de la Empresa], estamos comprometidos con el éxito de nuestros clientes y con el crecimiento y desarrollo de nuestra industria.
                             </p>
                         </div>
                     </div>
