--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,35 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Brindamos diferentes servicios de ingeniería.">
     <meta name="keywords" content="Servicios de ingeniería,servicios de ingeniería,servicios de ingeniería y construcción">
-    <title>Servicios</title>
+    <title>Servicios | Rebus</title>
+    <link rel="shortcut icon" href="../assets/img/logo/favicon-rebus.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<!-- Iconos -->
+<script src="https://kit.fontawesome.com/1ba7d96e8f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div class="header-top" >
-            <ul class="header-info">
-                <li>+54 299 4111 111</li>
-                <li><a href="">info@dominio.com</a></li>
-                <li>Irigoyen, Cipolletti, Río Negro</li>
-            </ul>
-            <ul class="header-social">
-                <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
-            </ul>
-        </div>
-        <div class="header-bottom" >
-            <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
-            <nav class="menu-ppal">
-                <a href="../index.html">Inicio</a>
-                <a href="./proyectos.html">Proyectos</a>
-                <a href="./servicios.html">Servicios</a>
-                <a href="./nosotros.html">Nosotros</a>
-                <a href="./contacto.html">Contacto</a>
-            </nav>
+        <div class="contenedor-header">
+            <div class="contenido-header">
+                <div class="header-gral header-top" >
+                    <ul class="header-gral header-info">
+                        <li><i class="fa-solid fa-phone"></i>+54 299 4111 111</li>
+                        <li><i class="fa-regular fa-envelope-open"></i><a href="">info@dominio.com</a></li>
+                        <li><i class="fa-solid fa-location-dot"></i>Irigoyen, Cipolletti, Río Negro</li>
+                    </ul>
+                    <ul class="header-social">
+                        <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="header-bottom" >
+                    <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
+                    <nav class="menu-ppal">
+                        <a href="../index.html">Inicio</a>
+                        <a href="./proyectos.html">Proyectos</a>
+                        <a href="./servicios.html">Servicios</a>
+                        <a href="./nosotros.html">Nosotros</a>
+                        <a href="./contacto.html">Contacto</a>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -53,50 +60,43 @@
                 <div class="contenido"> 
                     <div>
                         <h2>Ofrecemos diferentes servicios</h2>
-                        <p>Yorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
-                            turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
-                            nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
-                            tellus elit sed risus. Maecenas eget condimentum velit, sit amet 
-                        feugiat lectus. Class aptent taciti sociosqu ad litora torquent per
+                        <p>En Rebus, nos enorgullece ofrecer una amplia gama de servicios especializados para satisfacer las necesidades específicas de nuestros clientes en el campo de la ingeniería y construcción. Nuestra experiencia y conocimientos nos permiten abordar proyectos de diversa envergadura y complejidad. Algunos de nuestros servicios incluyen:
+                            <ol>
+                                <li>Diseño arquitectónico: Nuestro equipo de arquitectos talentosos crea diseños innovadores y funcionales que reflejan la visión única de cada cliente.</li>
+                                <li>Ingeniería estructural: Desarrollamos soluciones de ingeniería sólidas y seguras para garantizar la estabilidad y resistencia de las estructuras que construimos.</li>
+                                <li>Construcción: Nos especializamos en la gestión y ejecución de proyectos de construcción, cumpliendo con los más altos estándares de calidad y asegurando plazos eficientes.</li>
+                                <li>Remodelaciones y renovaciones: Brindamos servicios de remodelación y renovación de espacios existentes, transformándolos en áreas funcionales y estéticamente atractivas.</li>
+                                <li>Consultoría técnica: Proporcionamos asesoramiento técnico experto en todas las etapas de un proyecto, desde el diseño inicial hasta la supervisión de la construcción.</li>
+                            </ol>
                         </p>
+                        <p>En Rebus, nos adaptamos a los desafíos únicos de cada proyecto y nos comprometemos a brindar soluciones personalizadas y de calidad.</p>
                     </div>
-                    <div class="galeria-de-3x3">
+                    <div class="galeria-de-3x2">
                         <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <a href="#"><img src="../assets/img/welding-processing.jpg" alt="Procesamiento de Soldadura"></a>
+                            <h3>Procesamiento de Soldadura</h3>
                         </div>
                         <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <a href="#"><img src="../assets/img/see-company.jpg" alt="Compañía de semillas"></a>
+                            <h3>Compañía de semillas</h3>
                         </div>
                         <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <a href="#"><img src="../assets/img/petrolium-camber.jpg" alt="Petróleo y Gas"></a>
+                            <h3>Petróleo y Gas</h3>
                         </div>
                         <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <a href="#"><img src="../assets/img/service-4.jpg" alt="Ingeniería de máquinas"></a>
+                            <h3>Ingeniería de máquinas</h3>
                         </div>
                         <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <a href="#"><img src="../assets/img/service-6.jpg" alt="Energía electrica"></a>
+                            <h3>Energía electrica</h3>
                         </div>
                         <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
+                            <a href="#"><img src="../assets/img/service-5.jpg" alt="Ingeniería Química"></a>
+                            <h3>Ingeniería Química</h3>
                         </div>
-                        <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
-                        </div>
-                        <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
-                        </div>
-                        <div>
-                            <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                            <h3>Servicio X</h3>
-                        </div>                  
+                                        
                     </div>
                 </div>
             </section>
