--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,35 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="REBUS - Dejanos tu mensaje y te contactamos a la brevedad.">
     <meta name="keywords" content="REBUS, contacto, email, teléfono, dirección">
-    <title>Contacto</title>
+    <title>Contacto | Rebus</title>
+    <link rel="shortcut icon" href="../assets/img/logo/favicon-rebus.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<!-- Iconos -->
+<script src="https://kit.fontawesome.com/1ba7d96e8f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div class="header-top" >
-            <ul class="header-info">
-                <li>+54 299 4111 111</li>
-                <li><a href="">info@dominio.com</a></li>
-                <li>Irigoyen, Cipolletti, Río Negro</li>
-            </ul>
-            <ul class="header-social">
-                <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
-            </ul>
-        </div>
-        <div class="header-bottom" >
-            <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
-            <nav class="menu-ppal">
-                <a href="../index.html">Inicio</a>
-                <a href="./proyectos.html">Proyectos</a>
-                <a href="./servicios.html">Servicios</a>
-                <a href="./nosotros.html">Nosotros</a>
-                <a href="./contacto.html">Contacto</a>
-            </nav>
+        <div class="contenedor-header">
+            <div class="contenido-header">
+                <div class="header-gral header-top" >
+                    <ul class="header-gral header-info">
+                        <li><i class="fa-solid fa-phone"></i>+54 299 4111 111</li>
+                        <li><i class="fa-regular fa-envelope-open"></i><a href="">info@dominio.com</a></li>
+                        <li><i class="fa-solid fa-location-dot"></i>Irigoyen, Cipolletti, Río Negro</li>
+                    </ul>
+                    <ul class="header-social">
+                        <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="header-bottom" >
+                    <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
+                    <nav class="menu-ppal">
+                        <a href="../index.html">Inicio</a>
+                        <a href="./proyectos.html">Proyectos</a>
+                        <a href="./servicios.html">Servicios</a>
+                        <a href="./nosotros.html">Nosotros</a>
+                        <a href="./contacto.html">Contacto</a>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
     <main>
