--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -7,38 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Desarrollamos diversos proyectos por eso nuestra trayectoria nos avala.">
     <meta name="keywords" content="proyectos de ingeniería,empresas de proyectos de ingeniería,proyectos de ingeniería ejemplos">
-    <title>Proyectos</title>
+    <title>Proyectos | Rebus</title>
+    <link rel="shortcut icon" href="../assets/img/logo/favicon-rebus.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<!-- Iconos -->
+<script src="https://kit.fontawesome.com/1ba7d96e8f.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <header>
-        <div class="header-top" >
-            <ul class="header-info">
-                <li>+54 299 4111 111</li>
-                <li><a href="">info@dominio.com</a></li>
-                <li>Irigoyen, Cipolletti, Río Negro</li>
-            </ul>
-            <ul class="header-social">
-                <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
-                <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
-            </ul>
-        </div>
-        <div class="header-bottom" >
-            <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
-            <nav class="menu-ppal">
-                <a href="../index.html">Inicio</a>
-                <a href="./proyectos.html">Proyectos</a>
-                <a href="./servicios.html">Servicios</a>
-                <a href="./nosotros.html">Nosotros</a>
-                <a href="./contacto.html">Contacto</a>
-            </nav>
+        <div class="contenedor-header">
+            <div class="contenido-header">
+                <div class="header-gral header-top" >
+                    <ul class="header-gral header-info">
+                        <li><i class="fa-solid fa-phone"></i>+54 299 4111 111</li>
+                        <li><i class="fa-regular fa-envelope-open"></i><a href="">info@dominio.com</a></li>
+                        <li><i class="fa-solid fa-location-dot"></i>Irigoyen, Cipolletti, Río Negro</li>
+                    </ul>
+                    <ul class="header-social">
+                        <li><a href=""><img src="../assets/img/iconos/instagram.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/facebook.png" alt=""></a></li>
+                        <li><a href=""><img src="../assets/img/iconos/whatsapp.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="header-bottom" >
+                    <a href=""><img src="../assets/img/logo/Rebus-blanco.png" alt="Logo REBUS" style="width: 150px;"></a>
+                    <nav class="menu-ppal">
+                        <a href="../index.html">Inicio</a>
+                        <a href="./proyectos.html">Proyectos</a>
+                        <a href="./servicios.html">Servicios</a>
+                        <a href="./nosotros.html">Nosotros</a>
+                        <a href="./contacto.html">Contacto</a>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -58,40 +62,40 @@
                 <h2>Nuestros Proyectos</h2>
                 <div class="galeria-de-3x3">
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/rail-track.jpg" alt="Vía férrea"></a>
+                        <h3>Vía férrea</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/welding-processing.jpg" alt="Procesamiento de soldadura"></a>
+                        <h3>Procesamiento de soldadura</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/petrolium-camber.jpg" alt="Cámara de petróleo"></a>
+                        <h3>Cámara de petróleo</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/manufacturig.jpg" alt="Fabricación"></a>
+                        <h3>Fabricación</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/project-1.jpg" alt="empresa de semillas"></a>
+                        <h3>Empresa de semillas</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/solar-power.jpg" alt="Energía solar"></a>
+                        <h3>Energía solar</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/industria.jpg" alt="Industria"></a>
+                        <h3>Industria</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/hombre-maquina.jpg" alt="Procesamiento de máquinas"></a>
+                        <h3>Procesamiento de máquinas</h3>
                     </div>
                     <div>
-                        <a href="#"><img src="../assets/img/hombre-trabajando.jpg" alt=""></a>
-                        <h3>Proyecto X</h3>
+                        <a href="#"><img src="../assets/img/project-3.jpg" alt="Aserradero"></a>
+                        <h3>Aserradero</h3>
                     </div>                  
                 </div>
             </div>
